syntax = "proto3";

package todoPackage;

service Todo {
    rpc createTodo(TodoItem) returns (TodoItem);

    rpc readTodos(Empty) returns (TodoItems);

    rpc readTodoStream(Empty) returns (stream TodoItem);
}

message Empty {}

message TodoItem {
    int32 id = 1;
    string text = 2;
}

message TodoItems {
    repeated TodoItem items = 1;
}

